adicionada a migração do Identity

--- a/SistemaTeste2/SistemaTeste2/appsettings.json
+++ b/SistemaTeste2/SistemaTeste2/appsettings.json
@@ -4,9 +4,9 @@
       "Default": "Warning"
     }
   },
-  //informações de qual banco esse projeto deve acessar
   "ConnectionStrings": {
-    "Default": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=SistemaTeste2;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
-  }, 
-  "AllowedHosts": "*"   
+    "Default": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=SistemaTeste2;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
+    "AppIdentityContextConnection": "DataSource=SistemaTeste2.MVC.db"
+  },
+  "AllowedHosts": "*"
 }
