adicionand login externo pelo google

--- a/SistemaTeste2/SistemaTeste2/appsettings.json
+++ b/SistemaTeste2/SistemaTeste2/appsettings.json
@@ -8,5 +8,16 @@
     "Default": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=SistemaTeste2;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
     "AppIdentityContextConnection": "DataSource=SistemaTeste2.MVC.db"
   },
+  "ExternalLogin": {
+    "Microsoft": {
+      "ClientId": "d85b8246-9aff-4fb7-a6a9-06e2d57e7761",
+      "ClientSecret": "y~v39XbK5kJq4yOQ7s4~~MY.f-3v9oHZG6"
+    },
+    "Google": {
+      "ClientId": "866672575173-egojidl7hh8thteosak4b653g27oj247.apps.googleusercontent.com",
+      "ClientSecret": "Qx_7--GEuvMv0qi6vh3M0-R5"
+    }
+    },
   "AllowedHosts": "*"
 }
+
